# JoyEngine

./: .gitignore  CMakeLists.txt  JoyEngine.sln  WindowHandler.cpp  WindowHandler.h  main.cpp
JoyEngine/: CMakeLists.txt  Gameplay.cmake  IJoyGraphicsContext.h  JoyContext.cpp  JoyContext.h  JoyEngine.cpp  JoyEngine.h  JoyEngineContext.cpp  JoyEngineContext.h  JoyEngineVS.vcxproj  JoyEngineVS.vcxproj.filters  JoyGraphicsContext.cpp  JoyGraphicsContext.h  WindowHandler.h  main.cpp
JoyEngine/Common/: Color.h  Resource.h  Serializable.h  Serialization.cpp  Serialization.h  Thread.h  Time.cpp  Time.h
JoyEngine/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h  MeshRendererTypes.cpp  MeshRendererTypes.h  RoomBehaviour.cpp  RoomBehaviour.h
JoyEngine/DataManager/: DataManager.cpp  DataManager.h
JoyEngine/GameplayComponents/: RoomBehaviour.cpp  RoomBehaviour.h
JoyEngine/GraphicsManager/: GraphicsManager.cpp  GraphicsManager.h
JoyEngine/JoyEngine/: JoyContext.h  JoyEngine.cpp  JoyEngine.h
JoyEngine/JoyEngine/Common/: Resource.h  Serialization.h  SerializationUtils.cpp  Thread.h  Time.cpp  Time.h
JoyEngine/JoyEngine/Components/: MeshRenderer.cpp  MeshRenderer.h
JoyEngine/JoyEngine/DataManager/: DataManager.cpp  DataManager.h
JoyEngine/JoyEngine/GraphicsManager/: GraphicsManager.h  (+1 more)
JoyEngine/MemoryManager/: GPUBuddyAllocator.h  GPUDummyAllocator.h  MemoryManager.cpp  MemoryManager.h
JoyEngine/RenderManager/: RenderManager.cpp  RenderManager.h  RenderObject.cpp  RenderObject.h  Swapchain.cpp  Swapchain.h  VulkanAllocator.h  VulkanTypes.h  VulkanUtils.cpp  VulkanUtils.h
JoyEngine/ResourceManager/: Buffer.cpp  DescriptorBuffer.cpp  DescriptorSetManager.cpp  DescriptorSetManager.h  GFXResource.cpp  GFXResource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SharedMaterial.cpp  SharedMaterial.h  Texture.cpp  Texture.h
JoyEngine/SceneManager/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
JoyEngine/Tests/: Test.cpp
JoyEngine/Utils/: Assert.h  FileUtils.h  GUID.h  GUIDUtils.h  ModelLoader.h  ObjectParser.cpp  ObjectParser.h  SceneParser.h
(+152 files in other folders)
